@@ -1,3 +1,11 @@
+2014-08-04  Corinna Vinschen  <corinna@vinschen.de>
+
+	* uinfo.cc (pwdgrp::fetch_account_from_windows): Drop "plus_prepended"
+	as naming style.  Drop enum name_style_t, use a boolean
+	"fully_qualified_name" value instead.  Rework function to drop
+	"plus_prepended" handling througout and default to "name only" style
+	as replacement.
+
 2014-07-31  Eric Blake  <eblake@redhat.com>
 
 	* include/pthread.h: Decorate attribute names with __, for
